--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form class="bg-dark">
+                <form class="bg-dark" style="font-family: inherit; font-size: 1rem;">
                     <p>Filter Search</p>
                     <ul class="list-group bg-dark">
                         <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
-                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                            <br/><input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="city">Enter City</label>
-                            <input type="text" placeholder="fresno" id="city" />
+                            <br/><input type="text" placeholder="fresno" id="city" />
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="state">Enter State</label>
-                            <input type="text" placeholder="ca" id="state" />
+                            <br/><input type="text" placeholder="ca" id="state" />
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="country">Enter Country</label>
-                            <input type="text" placeholder="us" id="country" />
+                            <br/><input type="text" placeholder="us" id="country" />
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="shape">Enter Shape</label>
-                            <input type="text" placeholder="triangle" id="shape" />
+                            <br/><input type="text" placeholder="triangle" id="shape" />
                         </li>
                     </ul>
                 </form>
